# fight-macros

./: .gitignore  Cargo.toml  README.md  config.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  splash.css  splash.html  tsconfig.json  vite.config.ts
src/: main.rs
src-tauri/: .gitignore  Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: handler.rs  launcher.rs  mod.rs  resource.rs  watchdog.rs
src-tauri/src/config/: commands.rs  handler.rs  mod.rs  model.rs  parser.rs  watchdog.rs
src-tauri/src/domain/: config.rs  enums.rs  macros.rs  mod.rs  profiles.rs  sequence_step.rs
src-tauri/src/engine/: event.rs  executor.rs  handler.rs  mod.rs  processor.rs  queue.rs
src-tauri/src/input/: commands.rs  global.rs  handler.rs  mod.rs  state.rs
src-tauri/src/keys/: enum_key.rs  key.rs  mod.rs
src/app/: lifecycle.rs  mod.rs
src/config/: handler.rs  service.rs  types.rs
src/engine/: executor.rs  macro_queue.rs  mapper.rs  mod.rs  processor.rs  queue.rs  queue_handler.rs
src/input/: combo.rs  keyboard.rs  mod.rs  recorder.rs
src/main/: App.tsx  main.tsx
src/main/components/: KeyboardButton.tsx  MacroForm.tsx  MacroItem.tsx  MacroItemMenu.tsx  MacroList.tsx  ProfileForm.tsx  ProfileList.tsx  ProfileRow.tsx  ProfileSidebar.tsx  RefreshButton.tsx  SectionHeader.tsx  SequenceEditor.tsx  SequenceForm.tsx  SequenceStepItem.tsx
src/main/hooks/: useGlobalActions.ts  useProfileForm.ts  useProfileList.ts
src/main/providers/: GlobalProvider.tsx
src/main/reducers/: macro.actions.ts  macro.events.ts  macro.handler.ts  macro.utils.ts
src/main/services/: config.ts  key.ts  keyboard.ts
src/styles/: global.css
src/ui/: mod.rs  view.rs
src/utils/: helpers.rs  logging.rs  mod.rs
(+66 files in other folders)
