[package]
name = "fight-macros"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
rdev = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
win-hotkey = "0.3.0"
